--- a/server/static/main.css
+++ b/server/static/main.css
@@ -969,7 +969,7 @@ input[type="number"]::-webkit-outer-spin-button {
     box-sizing: border-box;
     position: relative;
     display: block;
-    transform: scale(var(--ggs, 1));
+    /*transform: scale(var(--ggs, 1));*/
     width: 16px;
     height: 12px;
     border-bottom-left-radius: 120px;
