disable menu on main

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -2,19 +2,19 @@
 
 
 {% block extra_header %}
-<div class="header-inner">
-    <!-- Trigger link -->
-    <a href="#" id="menuLink">Chat<span>&nbsp;</span><span class="chevron-down"></span></a>
+<!--<div class="header-inner">-->
+<!--    &lt;!&ndash; Trigger link &ndash;&gt;-->
+<!--    <a href="#" id="menuLink">Chat<span>&nbsp;</span><span class="chevron-down"></span></a>-->
 
-    <!-- Hidden menu -->
-    <div id="menu" class="hidden">
-        More modes are coming.
-        <hr>
-        <a href="#" class="mode-button" id="mode-chat">Chat</a>
-        <a href="#" class="mode-button" id="mode-stackexchange">Stackexchange</a>
-    </div>
+<!--    &lt;!&ndash; Hidden menu &ndash;&gt;-->
+<!--    <div id="menu" class="hidden">-->
+<!--        More to come-->
+<!--&lt;!&ndash;        <hr>&ndash;&gt;-->
+<!--&lt;!&ndash;        <a href="#" class="mode-button" id="mode-chat">Chat</a>&ndash;&gt;-->
+<!--&lt;!&ndash;        <a href="#" class="mode-button" id="mode-stackexchange">Stackexchange</a>&ndash;&gt;-->
+<!--    </div>-->
 
-</div>
+<!--</div>-->
 {% endblock extra_header %}
 
 {% block sidebar %}
