--- a/server/static/main.css
+++ b/server/static/main.css
@@ -1043,3 +1043,26 @@ summary {
     cursor: pointer;
     margin-bottom: 8px;
 }
+
+div.warning input {
+    border: 1px solid red; /* Example to highlight the field in error */
+    /*position: relative;*/
+}
+
+div.warning:after {
+    /*position: absolute;*/
+    /*top: 10px;*/
+    content: "Field cannot be empty"; /* Error message */
+    margin-left: 5px;
+    color: red; /* Text color of the error message */
+    display: block; /* Makes the pseudo-element behave like a block element */
+    /*font-size: 0.8em; !* Smaller font size for the error message *!*/
+    /*margin-top: 5px; !* Spacing between the input field and the error message *!*/
+    /*display: block;*/
+}
+.warning-message {
+    display: none;
+}
+div.warning .warning-message {
+    display: block;
+}
