nicer file handling

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -56,6 +56,12 @@
         <div>Chat here</div>
     </div>
     <div class="chat-input">
+        <div id="extra-input-buttons">
+            <!--suppress HtmlUnknownAnchorTarget -->
+            <a href="#popupUpload" id="translate-button"><i class="gg-attachment"></i></a>
+<!--            <button id="record"><i class="gg-mic"></i></button>-->
+        </div>
+
         <div id="input-box" class="input-box" contenteditable="true" data-text="Type here..."></div>
         <button id="stop-generating" disabled="disabled">
             Stop generating
@@ -63,11 +69,11 @@
         </button>
         <div class="footer">
             <div class="footer-buttons">
-                <!--suppress HtmlUnknownAnchorTarget -->
-                <a href="#popupUpload" id="translate-button">
-                    Upload
+
+<!--                <a href="#popupUpload" id="translate-button">-->
+<!--                    Upload-->
                     <span id="upload-plus"></span>
-                </a>&nbsp;
+<!--                </a>&nbsp;-->
                 <span id="timing-info"></span>
                 <!--suppress HtmlUnknownAnchorTarget -->
                 <a href="#popupSettings" id="settings-button">Settings</a>&nbsp;
