--- a/server/templates/common/popups/upload.html
+++ b/server/templates/common/popups/upload.html
@@ -46,6 +46,7 @@
                 <div>
                     <button id="upload-button" class="ml-auto">
                         Upload
+                        <span class="spinner"></span>
                     </button>
                 </div>
 
