--- a/server/templates/common/popups/upload.html
+++ b/server/templates/common/popups/upload.html
@@ -33,14 +33,26 @@
                 <div>
                     <label for="collection-selector">Collection</label>
                     <select id="collection-selector" name="collection-selector">
-                        <option value="None">None, just use file in the current context</option>
-                        <option value="New" disabled>New collection</option>
+                        <option>None, just use file in the current context</option>
+                        <option value="New">New collection</option>
                         <option value="iacr" disabled>IACR</option>
                     </select>
                 </div>
-
                 <div class="param-help">
-                    A collection of documents can be re-used in later conversations.
+                    A collection is required if the input exceeds the models context or if
+                    you want to be able to query many files at once.
+                    <br><br>
+                    In this case, the content of the files is being chunked and stored in a database. When using
+                    the collection, the most similar chunks are retrieved and placed into the context.
+                    <br><br>
+                    For more information, see "Retrieval Augmented Generation" (RAG).
+                </div>
+                <div>
+                    <label for="collection-name">Collection name</label>
+                    <input type="text" placeholder="Please provide a name" required="required" id="collection-name" name="collection-name">
+                </div>
+                <div class="param-help">
+                    &nbsp;
                 </div>
                 <div>
                     <button id="upload-button" class="ml-auto">
@@ -48,7 +60,6 @@
                         <span class="spinner"></span>
                     </button>
                 </div>
-
             </form>
         </div>
     </div>
